= Changelog
== Version 0.4.3 - 2008-10-22

=== Minor Enhancement

* update to SQLite version 3.6.4

== Version 0.4.2 - 2008-10-12

=== Minor Enhancements

* release of windows gem

== Version 0.4.1 - 2008-09-28

=== Minor Enhancement 

* update to SQLite3 version 3.6.3
* change rdoc template to darkfish
  
== Version 0.4.0 - 2008-09-14

=== Major Enhancements
* update to SQLite3 version 3.6.2 and enable the RTree option by default
* Amalgalite::Requires module allowing ruby code to be 'required' from columns in an SQLite database
* Amagalite::Requires::Bootstrap extension module enabling low level boot
  strapping of the pure ruby Amalgalite code from an sqlite database

=== Minor Enhancements

* more indepth information about indexes is available via the Index class
* add support for sqlite3_status and sqlite3_db_status information

=== Bugfixes

* fix nil exception when using a declared_data_type on primary key column that
  has no declared_data_type
* when Database#transaction is passed a block, the return value is the return
  value of the block
* nested transactions are 'faked'.  Calling Database#transaction while
  Databased#in_transaction? is true does not result in an exception, but
  continues on in the current transaction.  
* raise LoadError if required in the same program as sqlite3-ruby.  These
  libraries conflict with each other.

== Version 0.2.4 - 2008-07-13

===  Bugfixes
* fix compilation when ruby is compiled without pthreads using 

== Version 0.2.3 - 2008-07-12

=== Bugfixes
* make sure file permissions are all read before shipping gem

== Version 0.2.2 - 2008-07-12

=== Bugfixes
* Database#pragma should accept a block just like Database#execute does
* convert to using extconf.rb instead of mkrf to enable compilation as a
  direct ruby extension in the ruby source tree

== Version 0.2.1 - 2008-07-05

=== Bugfixes
* make sure that the pthread support in sqlite3 matches that of ruby
* fix schema reloading in the example scripts
